# personal-study

./: .pre-commit-config.yaml  README.md  pyproject.toml
design_pattern/: readme.md
general/: 4_I_Interface_Segregation_Principle.ipynb  SOLID.md
software_architecture/: readme.md
solid/: 1.S_Single_Responsibility_Principle.ipynb  5_D_Dependency_Inversion_Principle.ipynb  SOLID.md
