[tool.poetry]
name = "personal-study"
version = "0.1.0"
description = ""
authors = ["HyunSeungLee <hslrock@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"
black = {extras = ["jupyter"], version = "^24.8.0"}
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
